# Birdwatcher

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  TODO  appveyor.yml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python_package.yml
birdwatcher/: README.rst  __init__.py  _version.py  backgroundsubtraction.py  bgsegm.py  coordinatearrays.py  coordinatedata.py  ffmpeg.py  frame.py  frameprocessing.py  frames.py  improcessing.py  movementdetection.py  parameters.py  plotting.py  record.py  recording.py  utils.py  video.py  videoinput.py
birdwatcher/movementdetection/: __init__.py  movementdetection.py  parameterselection.py
birdwatcher/tests/: __init__.py  test_backgroundsubtraction.py  test_coordinatearrays.py  test_frameprocessing.py  test_movementdetection.py  test_parameterselection.py  test_plotting.py  test_videoinput.py
docs/: Makefile  api.rst  conf.py  design.rst  development.rst  index.rst  installation.rst  make.bat  recipes.rst  recipes_index.rst  releasenotes.rst  testing.rst  troubleshooting.rst
docs/_static/: banner.webm  custom.css  movementclip.webm  movementclipcoords.webm
docs/recipes/: addframenumbers.rst  archivecoordinatedata.rst  concatenatingtransformations.rst  detectmovement.rst  extractaudio.rst  loadingdetectionresults.rst  multipletransformations.rst  resizevideo.rst  videofileproperties.rst
notebooks/: 1_videofile.ipynb  1_videoframes.ipynb  2_backgroundsubtraction.ipynb  2_movementdetection_detailed.ipynb  3_coordinatearrays.ipynb  3_movementdetection.ipynb  4_choose_parameters.ipynb  4_parameterselection.ipynb  5_movementdetection.ipynb  6_batch.ipynb  6_batchdetection.ipynb  7_staticbackgroundsubtraction.ipynb  README.rst  banner.ipynb  bokeh_sandbox.ipynb  choose_parameters.ipynb  movementdetection.ipynb  movementdetection_detailed.ipynb  videofile.ipynb
notebooks/.ipynb_checkpoints/: videofile-checkpoint.ipynb
notebooks/zf20s_low_movementknn_me2/coordinates.drarr/: README.txt  metadata.json
notebooks/zf20s_low_movementknn_me2/coordinates.drarr/indices/: README.txt  arraydescription.json
notebooks/zf20s_low_movementknn_me2/coordinates.drarr/values/: README.txt  arraydescription.json
notebooks/zf20s_low_movementknn_me2/coordscount.darr/: README.txt  arraydescription.json  metadata.json
notebooks/zf20s_low_movementknn_me2/coordsmean.darr/: README.txt  arraydescription.json
src/birdwatcher/: __init__.py  backgroundsubtraction.py  coordinatearrays.py  ffmpeg.py  frames.py  plotting.py  utils.py  video.py
src/birdwatcher/movementdetection/: __init__.py  movementdetection.py  parameterselection.py
tests/: test_backgroundsubtraction.py  test_coordinatearrays.py  test_ffmpeg.py  test_frameprocessing.py  test_movementdetection.py  test_parameterselection.py  test_plotting.py  test_videoinput.py  test_videoiterframes.py
