[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name="birdwatcher"
version = "0.6.0"
authors = [
  {name = "Gabriel Beckers", email = "g.j.l.beckers@uu.nl"},
  {name = "Carien Mol", email = "c.mol@uu.nl"}
]
description = 'A Python computer vision library for animal behavior'
license = "BSD-3-Clause"
keywords = ["animal", "behavior", "computer-vision", "data-science", "ffmpeg", "opencv"]
classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
        'Development Status :: 4 - Beta',
        'Intended Audience :: Education',
        'Intended Audience :: Developers',
        'Intended Audience :: Information Technology',
        'Intended Audience :: Science/Research',
]
dependencies = [
    "darr==0.6.0",
    "numpy==2.2.5",
    "matplotlib==3.10.0",
    "opencv-python==4.11.0.86",
    "opencv-contrib-python==4.11.0.86",
    "pandas==2.2.3",
    "seaborn==0.13.2"
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/gbeckers/Birdwatcher"
Repository = "https://github.com/gbeckers/Birdwatcher.git"
Documentation = "https://birdwatcher.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
